--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="action">#09CDDA</color>
+    <color name="score_bust">#EF504F</color>
+    <color name="score_low">#FFDA66</color>
+    <color name="score_ok">#FFFFFF</color>
 </resources>
