--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -58,7 +58,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:checked="true"
-            android:text="DieA" />
+            android:text="1" />
 
         <se.nielstrom.greed.DieButton
             android:id="@+id/die_b"
@@ -66,7 +66,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:checked="true"
-            android:text="DieB" />
+            android:text="2" />
     </LinearLayout>
 
     <LinearLayout
@@ -82,7 +82,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:checked="true"
-            android:text="DieC" />
+            android:text="3" />
 
         <se.nielstrom.greed.DieButton
             android:id="@+id/die_d"
@@ -90,7 +90,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:checked="true"
-            android:text="DieD" />
+            android:text="4" />
     </LinearLayout>
 
     <LinearLayout
@@ -105,7 +105,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:checked="true"
-            android:text="DieE" />
+            android:text="5" />
 
         <se.nielstrom.greed.DieButton
             android:id="@+id/die_f"
@@ -113,7 +113,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:checked="true"
-            android:text="DieF" />
+            android:text="6" />
     </LinearLayout>
 
     <LinearLayout
