--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -63,6 +63,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:checked="true"
+                android:background="@drawable/die_button"
                 android:text="1" />
 
             <se.nielstrom.greed.DieButton
@@ -71,6 +72,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:checked="true"
+                android:background="@drawable/die_button"
                 android:text="2" />
         </LinearLayout>
 
@@ -87,6 +89,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:checked="true"
+                android:background="@drawable/die_button"
                 android:text="3" />
 
             <se.nielstrom.greed.DieButton
@@ -95,6 +98,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:checked="true"
+                android:background="@drawable/die_button"
                 android:text="4" />
         </LinearLayout>
 
@@ -110,6 +114,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:checked="true"
+                android:background="@drawable/die_button"
                 android:text="5" />
 
             <se.nielstrom.greed.DieButton
@@ -118,6 +123,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:checked="true"
+                android:background="@drawable/die_button"
                 android:text="6" />
         </LinearLayout>
 
@@ -142,7 +148,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="2"
-                android:background="@color/action"
                 android:clickable="true"
                 android:onClick="rollDice"
                 android:text="@string/roll" />
