--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -57,7 +57,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:background="@drawable/die_button"
             android:text="1" />
 
         <se.nielstrom.greed.DieButton
@@ -65,8 +65,9 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:background="@drawable/die_button"
             android:text="2" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -81,7 +82,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:background="@drawable/die_button"
             android:text="3" />
 
         <se.nielstrom.greed.DieButton
@@ -89,7 +90,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:background="@drawable/die_button"
             android:text="4" />
     </LinearLayout>
 
@@ -104,7 +105,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:background="@drawable/die_button"
             android:text="5" />
 
         <se.nielstrom.greed.DieButton
@@ -112,7 +113,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:checked="true"
+            android:background="@drawable/die_button"
             android:text="6" />
     </LinearLayout>
 
@@ -137,7 +138,6 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="3"
-            android:background="@color/action"
             android:clickable="true"
             android:onClick="rollDice"
             android:text="@string/roll" />
