--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="2500 total"
+                android:text="0 total"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
@@ -139,6 +139,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="3"
+                android:background="@color/button_checked"
                 android:clickable="true"
                 android:onClick="claimRound"
                 android:text="@string/claim" />
@@ -148,9 +149,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="2"
+                android:background="@color/button_checked"
                 android:clickable="true"
                 android:onClick="rollDice"
                 android:text="@string/roll" />
+
         </LinearLayout>
     </LinearLayout>
 
