Unify the colors and make sure all buttons represent state properly.

--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -139,20 +139,22 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="3"
-                android:background="@color/button_checked"
+                android:background="@drawable/claim_button_bg"
                 android:clickable="true"
                 android:onClick="claimRound"
-                android:text="@string/claim" />
+                android:text="@string/claim"
+                android:textColor="@color/button_text" />
 
             <Button
                 android:id="@+id/roll_button"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="2"
-                android:background="@color/button_checked"
+                android:background="@drawable/roll_button_bg"
                 android:clickable="true"
                 android:onClick="rollDice"
-                android:text="@string/roll" />
+                android:text="@string/roll"
+                android:textColor="@color/button_text" />
 
         </LinearLayout>
     </LinearLayout>
