--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -16,9 +16,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="500 points"
+            android:text="0 points"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="30dp" /> 
+            android:textSize="30dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -36,7 +36,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
-                android:id="@+id/rounds"
+                android:id="@+id/rounds_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
