--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -36,7 +36,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
-                android:id="@+id/rounds"
+                android:id="@+id/rounds_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
