--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -51,7 +51,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:orientation="horizontal" >
 
@@ -75,7 +75,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:orientation="horizontal" >
 
@@ -98,7 +98,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:orientation="horizontal" >
 
@@ -121,7 +121,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:orientation="horizontal" >
@@ -135,7 +135,8 @@
             android:clickable="true"
             android:onClick="claimRound"
             android:text="@string/claim"
-            android:textColor="@color/button_text" />
+            android:textColor="@color/button_text"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/roll_button"
@@ -146,7 +147,9 @@
             android:clickable="true"
             android:onClick="rollDice"
             android:text="@string/roll"
-            android:textColor="@color/button_text" />
+            android:textColor="@color/button_text"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
 </LinearLayout>
