--- a/res/layout/activity_score.xml
+++ b/res/layout/activity_score.xml
@@ -4,27 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <!--
+         I'm consiously using dp instead of sp here since, because of the
+         stylized nature of the text in this layout, I don't want the text to
+         scale depending on the users font-settings
+    -->
+
     <TextView
         android:id="@+id/winner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="left"
+        android:includeFontPadding="false"
         android:singleLine="true"
         android:text="@string/winner"
         android:textAllCaps="true"
-        android:includeFontPadding="false"
-        android:textSize="75sp" />
+        android:textSize="75dp" />
 
     <TextView
         android:id="@+id/you_scored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:includeFontPadding="false"
         android:singleLine="true"
         android:text="@string/you_scored"
         android:textAllCaps="true"
-        android:includeFontPadding="false"
         android:textColor="@color/button_unchecked"
         android:textSize="40dp" />
 
@@ -50,7 +56,7 @@
                 android:text="0"
                 android:textAllCaps="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="70sp" />
+                android:textSize="70dp" />
 
             <TextView
                 android:id="@+id/score_label"
@@ -64,7 +70,6 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/button_unchecked"
                 android:textSize="40dp" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -83,7 +88,7 @@
                 android:text="0"
                 android:textAllCaps="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="70sp" />
+                android:textSize="70dp" />
 
             <TextView
                 android:id="@+id/rounds_label"
@@ -97,9 +102,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/button_unchecked"
                 android:textSize="40dp" />
-
         </LinearLayout>
-
     </LinearLayout>
 
 </LinearLayout>
