--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -18,12 +18,15 @@
         <item name="android:windowActionBar" tools:targetApi="11">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+    
     <style name="dieButtonStyle">
         <item name="android:background">@drawable/die_button</item>
-        <!-- 
         <item name="android:adjustViewBounds">true</item>
-        <item name="android:padding">40dp</item>
+        <item name="android:padding">38dp</item>
         <item name="android:scaleType">fitCenter</item>
-         -->
+    </style>
+    
+    <style name="dieButtonStyleLand" parent="dieButtonStyle">
+        <item name="android:padding">50dp</item>
     </style>
 </resources>
