Began extracting models into their own classes.

--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -57,7 +57,7 @@
             android:layout_weight="1"
             android:orientation="vertical" >
 
-            <se.nielstrom.greed.DieButton
+            <se.nielstrom.greed.views.DieButton
                 android:id="@+id/die_a"
                 style="@style/dieButtonStyleLand"
                 android:layout_width="fill_parent"
@@ -65,7 +65,7 @@
                 android:layout_weight="1"
                 android:text="1" />
 
-            <se.nielstrom.greed.DieButton
+            <se.nielstrom.greed.views.DieButton
                 android:id="@+id/die_b"
                 style="@style/dieButtonStyleLand"
                 android:layout_width="fill_parent"
@@ -81,7 +81,7 @@
             android:layout_weight="1"
             android:orientation="vertical" >
 
-            <se.nielstrom.greed.DieButton
+            <se.nielstrom.greed.views.DieButton
                 android:id="@+id/die_c"
                 style="@style/dieButtonStyleLand"
                 android:layout_width="fill_parent"
@@ -89,7 +89,7 @@
                 android:layout_weight="1"
                 android:text="3" />
 
-            <se.nielstrom.greed.DieButton
+            <se.nielstrom.greed.views.DieButton
                 android:id="@+id/die_d"
                 style="@style/dieButtonStyleLand"
                 android:layout_width="fill_parent"
@@ -104,7 +104,7 @@
             android:layout_weight="1"
             android:orientation="vertical" >
 
-            <se.nielstrom.greed.DieButton
+            <se.nielstrom.greed.views.DieButton
                 android:id="@+id/die_e"
                 style="@style/dieButtonStyleLand"
                 android:layout_width="fill_parent"
@@ -112,7 +112,7 @@
                 android:layout_weight="1"
                 android:text="5" />
 
-            <se.nielstrom.greed.DieButton
+            <se.nielstrom.greed.views.DieButton
                 android:id="@+id/die_f"
                 style="@style/dieButtonStyleLand"
                 android:layout_width="fill_parent"
